[gd_scene load_steps=5 format=3 uid="uid://bvk15f7ibgsru"]

[ext_resource type="Script" path="res://scenes/game_objects/pipe/output_pipe.gd" id="1_qci4l"]

[sub_resource type="CylinderMesh" id="CylinderMesh_hil5j"]

[sub_resource type="BoxShape3D" id="BoxShape3D_m53tj"]
size = Vector3(1.59192, 2.14453, 1.6178)

[sub_resource type="BoxMesh" id="BoxMesh_6dw8n"]

[node name="OutputPipe" type="Node3D"]
script = ExtResource("1_qci4l")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 1.31667, 0)
mesh = SubResource("CylinderMesh_hil5j")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(0.998844, 0.0480653, 0, -0.0480653, 0.998844, 0, 0, 0, 1, 0.640063, -0.0266912, 0)
mesh = SubResource("CylinderMesh_hil5j")

[node name="DropoffArea" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="DropoffArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.74697, 0.60819, 0.086731)
shape = SubResource("BoxShape3D_m53tj")

[node name="Indicator" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.54441, 0)
mesh = SubResource("BoxMesh_6dw8n")

[connection signal="body_entered" from="DropoffArea" to="." method="_on_dropoff_area_body_entered"]
[connection signal="body_exited" from="DropoffArea" to="." method="_on_dropoff_area_body_exited"]
